Repair submit input style on iPhone

--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,8 @@
     display: block;
     cursor: pointer;
     margin-top: 30px;
+    color: black;
+    text-align: center;
   }
   
   input[type=submit]:hover {
